# Dijkstra

./: .gitignore  .gitlab-ci.yml
01Dijkstra/: CMakeLists.txt  External_GTest.cmake  README.md  gencsv.py
01Dijkstra/datasets/: randGraphGen.py
01Dijkstra/src/: dijkstra.cpp  dijkstra.h  graph.h  graphReader.cpp  graphReader.h  skewheap.h
01Dijkstra/test/: AllTests.cpp  testDijkstra.cpp  testReader.cpp  testSkewHeap.cpp
01Dijkstra/tex/: Makefile  main.tex  references.bib
01Dijkstra/time/: time.cpp
